chore: add slate-test-utils

--- a/packages/rich-text/tsconfig.json
+++ b/packages/rich-text/tsconfig.json
@@ -12,7 +12,8 @@
     "noImplicitAny": false,
     "allowJs": true,
     "jsx": "react",
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "resolveJsonModule": true
   },
   "linterOptions": {
     "exclude": ["src/**"]
