--- a/packages/rich-text/package.json
+++ b/packages/rich-text/package.json
@@ -59,6 +59,13 @@
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "7.13.13",
     "@contentful/field-editor-test-utils": "^1.0.0",
-    "@contentful/rich-text-react-renderer": "^15.6.2"
+    "@contentful/rich-text-react-renderer": "^15.6.2",
+    "slate-test-utils": "^1.1.1",
+    "jest-useragent-mock": "^0.1.1"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./jest.setup.js"
+    ]
   }
 }
